[INTERNAL][FIX] sap.ui.commons.Button - Internet Explorer Icons alignment in Bluecrystal and Goldreflection themes
BCP: 1580009833

--- a/src/themelib_sap_bluecrystal/src/sap/ui/commons/themes/sap_bluecrystal/Button.less
+++ b/src/themelib_sap_bluecrystal/src/sap/ui/commons/themes/sap_bluecrystal/Button.less
@@ -542,14 +542,6 @@ html[data-sap-ui-browser="ie8"] .sapUiBtnS.sapUiBtnIconOnly > span.sapUiBtnIco{
 	margin-top: 1px;
 }
 
-html[data-sap-ui-browser="ie9"] .sapUiBtnS > span.sapUiBtnIco{
-	margin-top: 0;
-}
-
-html[data-sap-ui-browser="ie9"] .sapUiBtnS.sapUiBtnIconOnly > span.sapUiBtnIco{
-	margin-top: 0;
-}
-
 .sapUiBtnS.sapUiBtnNorm.sapUiBtnDsbl > span.sapUiBtnIco {  /* make disabled icon look "reduced" */
 	opacity: .5;
 	filter: alpha(opacity=50);
@@ -558,4 +550,16 @@ html[data-sap-ui-browser="ie9"] .sapUiBtnS.sapUiBtnIconOnly > span.sapUiBtnIco{
 .sapUiBtnS.sapUiBtnLite.sapUiBtnDsbl > span.sapUiBtnIco {  /* switch back for lite button: make disabled icon look "reduced" */
 	opacity: .5;
 	filter: alpha(opacity=50);
+}
+
+html[data-sap-ui-browser="ie9"] .sapUiBtnS,
+html[data-sap-ui-browser="ie10"] .sapUiBtnS {
+	> img,
+	> span.sapUiBtnTxt,
+	&.sapUiBtnIconOnly > span.sapUiBtnIco,
+	> span.sapUiBtnIco {
+		line-height: 17px;
+		padding-bottom: 1px;
+		margin-top: 0;
+	}
 }
